--- a/crystudy/src/scss/pages/_Navigator.scss
+++ b/crystudy/src/scss/pages/_Navigator.scss
@@ -10,18 +10,22 @@
 
 #navilogo{
     font-family: 'Major Mono Display', Courier, monospace;
-    margin-top: 10px;
-    margin-left: 15px;
-    margin-bottom: 5px;
+    margin-left: 20px;
     font-size: 1.2rem;
 
     @media screen and (min-width: 768px) {
         font-size: 2.0rem;
+        display: inline;
     }
 }
 
-#logoimg{
-    display: inline-block;
+#logoIcon{
+    @media screen and (min-width: 768px) {
+        margin-top: 10px;
+    display: inline;
+    width: 50px;
+    height: 50px;
+    }
 }
 
 #crystudydiv{
