--- a/crystudy/src/scss/pages/_StudyRightBar.scss
+++ b/crystudy/src/scss/pages/_StudyRightBar.scss
@@ -5,6 +5,10 @@
     font-family: 'Montserrat', Courier, monospace;
 }
 
+#issueIcon{
+    float: right;
+}
+
 #rightframe{
     @media screen and (min-width: 768px) {
         width: 12%;
@@ -18,8 +22,12 @@
 
 #rightbarlogo{
     @media screen and (min-width: 768px){
+        display: block;
+        float: right;
+        text-align: right;
         font-family: 'Montserrat', Times, serif;
         margin-left: 10px;
+        margin-top: 0px;
     }
 }
 
