--- a/crystudy/src/scss/pages/_StudyDataBar.scss
+++ b/crystudy/src/scss/pages/_StudyDataBar.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap');
 
-#mainframe{
+#dataframe{
     @media screen and (min-width: 768px) {
         padding: 15px;
         font-family: 'Montserrat', Courier, monospace;
@@ -21,27 +21,14 @@
     }
 }
 
-#studyFrame{
-    padding-left: 50px;
+#studyDataTable{
+    @media screen and (min-width: 768px) {
+        font-family: 'Noto Sans KR', Courier, monospace;
+    }
 }
 
-#studyIcon{
-}
-
-#studyTitle{
-    font-size: 4.0rem;
-    margin-top: 0px;
-    padding-top: 0px;
-}
-
-.studyInfoTitle{
-    font-size: 2.0rem;
-    margin-bottom: 0px;
-    padding-bottom: 0px;
-    font-family: 'Noto Sans KR', Courier, monospace;
-}
-
-.studyInfo{
-    font-size: 1.3rem;
-    font-family: 'Noto Sans KR', Courier, monospace;
+.studyData{
+    @media screen and (min-width: 768px) {
+        margin-right: 40px;
+    }
 }
