--- a/crystudy/src/scss/pages/_Navigator.scss
+++ b/crystudy/src/scss/pages/_Navigator.scss
@@ -58,6 +58,7 @@
 
 #infologo{
     font-family:'Noto Sans KR', Times, serif;
+    font-weight: 700;
     margin: -5px;
     padding-left: 12px;
     padding-bottom: 10px;
