--- a/crystudy/src/scss/pages/_StudyRightBar.scss
+++ b/crystudy/src/scss/pages/_StudyRightBar.scss
@@ -31,6 +31,7 @@
         display: block;
         float: right;
         text-align: right;
+        font-weight: 700;
         font-family: 'Montserrat', Times, serif;
         margin-left: 10px;
         margin-top: 0px;
@@ -51,6 +52,7 @@
         border: 2px solid grey;
         border-radius: 30px;
         font-family:'Noto Sans KR', Times, serif;
+        font-weight: 700;
         padding-left: 15px;
         margin-left: 10px;
     }
