--- a/crystudy/src/scss/pages/_StudyLeftBar.scss
+++ b/crystudy/src/scss/pages/_StudyLeftBar.scss
@@ -24,6 +24,7 @@
     font-family:'Noto Sans KR', Times, serif;
     display: block;
     font-size: 1.0rem;
+    font-weight: 700;
     text-decoration: none;
     color: black;
     margin-bottom: 15px;
