--- a/crystudy/src/scss/pages/_StudyMainBar.scss
+++ b/crystudy/src/scss/pages/_StudyMainBar.scss
@@ -17,25 +17,27 @@
 #postFrame{
     @media screen and (min-width: 768px){
         margin-top: 50px;
-        padding-left: 100px;
+        padding-left: 200px;
     }
 }
 
 #studyFrame{
-    padding-left: 50px;
+    padding-left: 100px;
 }
 
 #studyIcon{
 }
 
 #studyTitle{
-    font-size: 4.0rem;
+    font-size: 3.5rem;
+    font-weight: 700;
     margin-top: 0px;
     padding-top: 0px;
 }
 
 .studyInfoTitle{
     font-size: 2.0rem;
+    font-weight: 700;
     margin-bottom: 0px;
     padding-bottom: 0px;
     font-family: 'Noto Sans KR', Courier, monospace;
@@ -43,5 +45,6 @@
 
 .studyInfo{
     font-size: 1.3rem;
+    font-weight: 700;
     font-family: 'Noto Sans KR', Courier, monospace;
 }
