--- a/crystudy/src/scss/pages/_StudyPlanBar.scss
+++ b/crystudy/src/scss/pages/_StudyPlanBar.scss
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap');
 
+.frame{
+    margin-left: 10%;
+    display: inline-block;
+}
+
 #planframe{
     @media screen and (min-width: 768px) {
         padding: 15px;
@@ -19,13 +24,36 @@
         padding-left: 100px;
     }
 }
-.studyPlan {
+
+#studyPlanLogo > h1, p{
+    font-family: 'Noto Sans KR', Courier, monospace;
+    font-weight: 700;
+}
+
+#studyPlanLogo{
+    font-family: 'Noto Sans KR', Courier, monospace;
+    font-weight: 700;
+    @media screen and (min-width: 768px){
+        margin-top: 9%;
+    margin-bottom: 0px;
+    margin-left: 15%;
+    }
+    
+}
+
+#studyPlan{
     .MuiPaper-elevation1 {
-        width: 100%;
+        display: inline-block;
         @media screen and (min-width: 768px){
-            width: 65%;
-            margin-left: 14%;
-            margin-top: 100px;
+            width: 1200px;
+            display: inline-block;
+            margin-left: 20%;
+            margin-top: 50px;
         }
     }
+}
+
+
+Paper{
+    display: inline-block;
 }
