--- a/crystudy/src/scss/pages/_StudySearchDetail.scss
+++ b/crystudy/src/scss/pages/_StudySearchDetail.scss
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap');
+
+*{
+    font-family: 'Noto Sans KR', Courier, monospace;
+    font-weight: 700;
+}
+
 .study-detail {
     display: flex;
     flex-direction: column;
@@ -54,17 +62,18 @@
             margin-top: 30px;
             .study-detail-input {
                 border: 1px solid black;
-                border-radius: 4px;
+                border-radius: 20px;
                 width: 220px;
                 height: 30px;
                 @media screen and (min-width: 768px) {
                     width: 600px;
-                    height: 30px;
+                    height: 43px;
+                    padding-left: 15px;
                 }
             }
             .study-detail-submit {
                 border: 1px solid black;
-                border-radius: 4px;
+                border-radius: 50px;
                 box-shadow: 3px 3px 3px #c4c4c4;
                 margin-left: 5px;
                 width: 70px;
@@ -72,8 +81,8 @@
                 background-color: #f3ddf4;
                 cursor: pointer;
                 @media screen and (min-width: 768px) {
-                    width: 80px;
-                    height: 35px;
+                    width: 100px;
+                    height: 43px;
                     margin-left: 15px;
                 }
             }
