--- a/crystudy/src/scss/pages/_Editor.scss
+++ b/crystudy/src/scss/pages/_Editor.scss
@@ -8,13 +8,27 @@
 
 .editorDiv{
     display: inline-block;
-    margin-left: 500px;
-    margin-top: 100px;
+    /*margin-left: 500px;
+    margin-top: 100px;*/
+    margin-left: 210px;
+    margin-top: -11px;
+    width: 60%;
+    height: 550px;
+}
+
+.ck.ck-editor__main {
+    height: 500px;
+}
+
+.ck.ck-editor__main>.ck-editor__editable:not(.ck-focused) {
+    border-color: var(--ck-color-base-border);
+    height: 90%;
 }
 
 #submitdiv{
-    margin-left: 450px;
     text-align: center;
+    margin: 10 auto;
+    margin-top: 20px;
 }
 
 #addbtn{
