--- a/crystudy/src/scss/pages/_StudyDataBar.scss
+++ b/crystudy/src/scss/pages/_StudyDataBar.scss
@@ -3,7 +3,7 @@
 
 #dataframe{
     @media screen and (min-width: 768px) {
-        padding: 15px;
+        //padding: 15px;
         font-family: 'Montserrat', Courier, monospace;
         width: 62%;
         position: absolute;
@@ -16,9 +16,11 @@
 
 #postFrame{
     @media screen and (min-width: 768px){
-        margin-top: 50px;
+        /*margin-top: 50px;
         padding-left: 150px;
-        padding-right: 100px;
+        padding-right: 100px;*/
+        margin-top: -23px;
+        margin-left: -15px;
     }
 }
 
