--- a/crystudy/src/scss/pages/_StudyLeftBar.scss
+++ b/crystudy/src/scss/pages/_StudyLeftBar.scss
@@ -15,7 +15,7 @@
 
 #menudiv{
     @media screen and (min-width: 768px) {
-        padding-left: 30px;
+        margin-left: 50px;
     }
    
 }
@@ -37,5 +37,10 @@
 
 
 #leftbarlogo{
-    padding-left: 15px;
+    margin-top: -41px;
+    margin-left: 50px;  
+}
+
+#workIcon{
+    width: 40px;
 }
