--- a/crystudy/src/scss/pages/_StudyPlanBar.scss
+++ b/crystudy/src/scss/pages/_StudyPlanBar.scss
@@ -3,7 +3,7 @@
 
 .frame{
     margin-left: 10%;
-    display: inline-block;
+    //display: inline-block;
 }
 
 #planframe{
@@ -34,9 +34,10 @@
     font-family: 'Noto Sans KR', Courier, monospace;
     font-weight: 700;
     @media screen and (min-width: 768px){
-        margin-top: 9%;
+        //margin-top: 9%;
     margin-bottom: 0px;
-    margin-left: 15%;
+    margin-left: 10%;
+    margin-top: -23px;
     }
     
 }
@@ -45,10 +46,10 @@
     .MuiPaper-elevation1 {
         display: inline-block;
         @media screen and (min-width: 768px){
-            width: 1200px;
+            width: 68%;
             display: inline-block;
-            margin-left: 20%;
-            margin-top: 50px;
+            margin-left: 10%;
+            //margin-top: 50px;
         }
     }
 }
