--- a/crystudy/src/scss/pages/_Editor.scss
+++ b/crystudy/src/scss/pages/_Editor.scss
@@ -33,6 +33,7 @@
 
 #addbtn{
     margin-top: 20px;
+    margin-right: 120px;
     border: 1px solid grey;
     border-radius: 10px;
     padding-top: 5px;
