--- a/crystudy/src/scss/pages/_StudyManage.scss
+++ b/crystudy/src/scss/pages/_StudyManage.scss
@@ -42,3 +42,19 @@ StudyRightBar{
 #rightframe{
     display: inline-block;
 }
+
+#backbtn{
+    border: 2px solid gray;
+    border-radius: 30px;
+    padding: 5px 10px 5px 10px;
+}
+
+#datapostframe{
+    max-width: 850px;
+    margin-top: 10px;
+    margin-left: 300px;
+}
+
+#lifecycleimg{
+    width: 90%;
+}
