--- a/crystudy/src/scss/pages/_Main.scss
+++ b/crystudy/src/scss/pages/_Main.scss
@@ -3,7 +3,7 @@
 .main-cont {
     display: flex;
     flex-direction: column;
-    margin: 8% auto;
+    margin: 5% auto;
 
     .main-title {
       font-family: 'Noto Sans KR', Courier, monospace;
@@ -37,19 +37,15 @@
       }
       .main-center-Rcont {
         background-color: white;
-        border-radius: 50%;
-        border: 1.2px solid #a9a3a3;
         width: 135px;
         height: 135px;
         margin: 0 auto;
         cursor: pointer;
 
         @media screen and (min-width: 768px) {
-          margin: 0 120px;
-          width: 175px;
-          height: 175px;
-          border: 1.5px solid #a9a3a3;
-          padding: 20px;
+          margin-top: 0px;
+          max-width: 256px;
+          max-height: 256px;
         }
       }
 
@@ -63,8 +59,6 @@
 
       .main-center-Lcont {
         background-color: white;
-        border-radius: 50%;
-        border: 1.2px solid #a9a3a3;
         width: 135px;
         height: 135px;
         margin: 30% auto;
@@ -72,10 +66,9 @@
 
         @media screen and (min-width: 768px) {
           margin: 0 120px;
-          width: 175px;
-          height: 175px;
-          border: 1.5px solid #a9a3a3;
-          padding: 20px;
+          width: 256px;
+          height: 256px;
+          padding-left: 20px;
         }
       }
 
@@ -86,8 +79,22 @@
         text-align: center;
         margin: -16px;
         @media screen and (min-width: 768px) {
-          margin-top: 25px;
         }
       }
     }
+}
+
+#searchcon{
+  width: 256px;
+  height: 256px;
+}
+
+#searchpage{
+  margin-left: 100px;
+  margin-right: 200px;
+}
+
+#mystudypara{
+  padding-left: 10px;
+  margin-top: 27px;
 }
