--- a/crystudy/src/scss/pages/_StudyLeftBar.scss
+++ b/crystudy/src/scss/pages/_StudyLeftBar.scss
@@ -4,6 +4,7 @@
 #leftframe{
     font-family: 'Montserrat', Times, serif;
     @media screen and (min-width: 768px) {
+        margin-left: 40px;
         width: 20%;
         display: inline-block;
         position: absolute;
