update : 06.07 heejin 쫌쫌따

--- a/crystudy/src/scss/pages/_Editor.scss
+++ b/crystudy/src/scss/pages/_Editor.scss
@@ -35,11 +35,8 @@
     margin-top: 20px;
     margin-right: 120px;
     border: 1px solid grey;
-    border-radius: 10px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 15px;
-    padding-right: 15px;
+    border-radius: 100px;
+    padding: 7px 20px 7px 20px;
 }
 
 .ck.ck-editor__editable:not(.ck-editor__editable){
