--- a/crystudy/src/scss/pages/_Navigator.scss
+++ b/crystudy/src/scss/pages/_Navigator.scss
@@ -30,6 +30,7 @@
 #logoIcon{
     @media screen and (min-width: 768px) {
         float: right;
+        // margin-left: 300px;
         display: inline;
         margin-right: 10px;
     }
