--- a/crystudy/src/scss/pages/_StudyAdd.scss
+++ b/crystudy/src/scss/pages/_StudyAdd.scss
@@ -11,6 +11,16 @@ h2{
     font-weight: 700;
 }
 
+input{
+    padding-left: 15px;
+    font-size: 1.1rem;
+}
+
+#submitbtn{
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
 textarea{
     border: 2px solid grey;
     border-radius: 20px;
