--- a/crystudy/src/scss/pages/_StudyDataBar.scss
+++ b/crystudy/src/scss/pages/_StudyDataBar.scss
@@ -45,9 +45,13 @@
     }
 }
 
+#boardhead{
+    margin-bottom: 0px;
+}
+
 #dataTable{
     margin-top: 50px;
-    margin-left: 130px;
+    margin-left: 120px;
 }
 
 tr{
