--- a/crystudy/src/scss/pages/_Editor.scss
+++ b/crystudy/src/scss/pages/_Editor.scss
@@ -42,3 +42,10 @@
 .ck.ck-editor__editable:not(.ck-editor__editable){
     min-height: 1000px;
 }
+
+.ck-rounded-corners .ck.ck-editor__main>.ck-editor__editable, .ck.ck-editor__main>.ck-editor__editable.ck-rounded-corners {
+    border-radius: var(--ck-border-radius);
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    height: 450px;
+}
