--- a/crystudy/src/scss/pages/_StudyPlanBar.scss
+++ b/crystudy/src/scss/pages/_StudyPlanBar.scss
@@ -62,3 +62,9 @@ Paper{
 #planhead{
     margin-bottom: 0px;
 }
+
+.MuiPaper-elevation1 {
+    //box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+    width: 1100px;
+    margin-left: 155px;
+}
