--- a/crystudy/src/scss/pages/_Main.scss
+++ b/crystudy/src/scss/pages/_Main.scss
@@ -3,20 +3,22 @@
 .main-cont {
     display: flex;
     flex-direction: column;
-    margin: 5% auto;
+    margin: 8% auto;
+    margin-left: 40px;
 
     .main-title {
       font-family: 'Noto Sans KR', Courier, monospace;
       font-size: 1.5rem;
       font-weight: 700;
-      margin: 0 auto;
+      margin-top: 15px;
+      margin-left:228px;
       @media screen and (min-width: 768px) {
         font-size: 1.4rem;
       }
     }
     .main-center-cont {
       display: grid;
-      margin: 10% auto;
+      margin: 13% auto;
       @media screen and (min-width: 768px) {
         display: flex;
         flex-direction: row;
@@ -39,7 +41,7 @@
         background-color: white;
         width: 135px;
         height: 135px;
-        margin: 0 auto;
+        margin-left: 60px;
         cursor: pointer;
 
         @media screen and (min-width: 768px) {
@@ -52,16 +54,19 @@
       .main-center-Rtxt {
         font-family: 'Noto Sans KR', Courier, monospace;
         font-weight: 700;
-        margin-top: 25px;
+
+        margin-top: 10px;
+        margin-left: 45px;
         text-align: center;
         font-size: 1.3rem;
       }
 
       .main-center-Lcont {
         background-color: white;
-        width: 135px;
-        height: 135px;
-        margin: 30% auto;
+        width: 245px;
+        height: 245px;
+        margin-top: 25px;
+        margin-left: 160px;
         cursor: pointer;
 
         @media screen and (min-width: 768px) {
@@ -77,7 +82,8 @@
         font-size: 1.3rem;
         font-weight: 700;
         text-align: center;
-        margin: -16px;
+        margin-left: -60px;
+
         @media screen and (min-width: 768px) {
         }
       }
