--- a/crystudy/src/scss/pages/_StudyMainBar.scss
+++ b/crystudy/src/scss/pages/_StudyMainBar.scss
@@ -7,7 +7,7 @@
         font-family: 'Montserrat', Courier, monospace;
         width: 62%;
         position: absolute;
-        display: inline-block;
+        //display: inline-block;
         left: 14%;
         right: 12%;
     }
@@ -22,7 +22,7 @@
 }
 
 #studyFrame{
-    padding-left: 100px;
+    //padding-left: 100px;
 }
 
 #studyIcon{
