--- a/crystudy/src/scss/pages/_Navigator.scss
+++ b/crystudy/src/scss/pages/_Navigator.scss
@@ -28,6 +28,9 @@
 }
 
 #logoIcon{
+    width: 200px;
+    margin-left: 10px;
+    margin-bottom: -5px;
     @media screen and (min-width: 768px) {
         float: right;
         // margin-left: 300px;
@@ -72,6 +75,7 @@ big{
 
 #crystudyIcon{
     margin-left: 10px;
-    text-align: center;
-    // height: 40px;
+    /* text-align: center; */
+    width: 350px;
+    margin-bottom: -40px;
 }
