--- a/crystudy/src/scss/pages/_StudyLeftBar.scss
+++ b/crystudy/src/scss/pages/_StudyLeftBar.scss
@@ -6,7 +6,7 @@
     @media screen and (min-width: 768px) {
         margin-left: 40px;
         width: 20%;
-        display: inline-block;
+        //display: inline-block;
         position: absolute;
         left: 30px;
     }
