--- a/crystudy/src/scss/pages/_StudyPlanBar.scss
+++ b/crystudy/src/scss/pages/_StudyPlanBar.scss
@@ -65,6 +65,7 @@ Paper{
 
 .MuiPaper-elevation1 {
     //box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
-    width: 1100px;
-    margin-left: 155px;
+    width: 360px;
+    /* margin-right: 30px; */
+    /* margin-left: 155px;*/
 }
