--- a/crystudy/src/scss/pages/_StudySearch.scss
+++ b/crystudy/src/scss/pages/_StudySearch.scss
@@ -10,9 +10,11 @@
     
     display: flex;
     flex-direction: column;
-    margin: 50px auto;
+    //@debug: 50px auto;
     font-family: 'Noto Sans KR', Courier, monospace;
     font-weight: 700;
+    margin-top: 70px;
+    width: 100%;
 
     .study-add-btn {
         font-family: 'Noto Sans KR', Courier, monospace;
@@ -20,11 +22,11 @@
         border: 1px solid #a9a3a3;
         border-radius: 5px;
         margin-top: -30px;
-        margin-bottom: 20px;
-        height: 28px;
-        width: 90px;
+        margin-bottom: 25px;
+        height: 32px;
+        width: 120px;
         cursor: pointer;
-        margin-left: 63px;
+        margin-left: 62px;
         @media screen and (min-width: 768px) {
             padding-left: 2px;
             width: 130px;
@@ -35,7 +37,8 @@
         }
     }
     .study-search-top {
-        margin: 0 auto;
+        width: 300px;
+        margin-left: 60px;
         border: 1.5px solid #a9a3a3;
         border-radius: 8px;
         box-shadow: 3px 3px 3px #c4c4c4;
@@ -65,7 +68,7 @@
             background-color: white;
             border: 0;
             border-radius: 8px;
-            width: 50px;
+            width: 70px;
             height: 35px;
             cursor: pointer;
             @media screen and (min-width: 768px) {
@@ -103,8 +106,8 @@
                 display: flex;
                 flex-direction: column;
                 margin-bottom: 15px;
-                height: 200px;
-                width: 100%;
+                height: 130px;
+                width: 300px;
                 border: 1.5px solid #a9a3a3;
                 border-radius: 12px;
                 box-shadow: 3px 3px 3px #c4c4c4;
@@ -183,7 +186,7 @@
     ul {
         list-style: none;
         display: inline-block;
-        margin-left: 20%;
+        margin-left: 23%;
         margin-top: -10px;
         @media screen and (min-width: 768px) {
             margin-left: 44%;
