--- a/crystudy/src/scss/pages/_StudySearchDetail.scss
+++ b/crystudy/src/scss/pages/_StudySearchDetail.scss
@@ -9,11 +9,10 @@
 .study-detail {
     display: flex;
     flex-direction: column;
-    margin: 0 auto;
     .study-detail-back {
         font-size: 2.5rem;
-        margin-top: 25px;
-        margin-left: 25px;
+        margin-top: 35px;
+        margin-left: 20px;
         cursor: pointer;
         @media screen and (min-width: 768px) {
             font-size: 3rem;
@@ -63,8 +62,8 @@
             .study-detail-input {
                 border: 1px solid black;
                 border-radius: 20px;
-                width: 220px;
                 height: 30px;
+                width: 210px;
                 @media screen and (min-width: 768px) {
                     width: 600px;
                     height: 43px;
@@ -76,8 +75,9 @@
                 border-radius: 50px;
                 box-shadow: 3px 3px 3px #c4c4c4;
                 margin-left: 5px;
-                width: 70px;
+                width: 90px;
                 height: 34px;
+                padding: 2px;
                 background-color: #f3ddf4;
                 cursor: pointer;
                 @media screen and (min-width: 768px) {
